# task-management

./: .dockerignore  .envrc  .gitignore  Dockerfile  README-Docker.md  README.md  docker-compose.yml  env.example  pyproject.toml
task_management/: celery.py  settings.py  urls.py
tasks/: admin.py  models.py  prompt.py  serializers.py  signals.py  tasks.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_priority.py  0003_task_tag.py  0004_alter_task_priority.py  0005_task_completed_at_task_notes.py  0006_task_create_by.py  0007_promptresponse.py
